--- a/package.json
+++ b/package.json
@@ -8,10 +8,14 @@
     },
     "dependencies": {
         "@tailwindcss/vite": "^4.1.11",
+        "@vitejs/plugin-react": "^5.1.2",
         "autoprefixer": "^10.4.20",
-        "axios": "^1.7.4",
+        "axios": "^1.13.2",
         "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^2.0",
+        "react": "^19.2.3",
+        "react-dom": "^19.2.3",
+        "reactflow": "^11.11.4",
         "tailwindcss": "^4.0.7",
         "vite": "^7.0.4"
     },
