--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "dev": "vite"
     },
     "dependencies": {
+        "@heroicons/react": "^2.2.0",
         "@tailwindcss/vite": "^4.1.11",
         "@vitejs/plugin-react": "^5.1.2",
         "autoprefixer": "^10.4.20",
